@@ -1,12 +1,7 @@
 {
-  "count": 11,
-  "uniques": 3,
+  "count": 10,
+  "uniques": 2,
   "clones": [
-    {
-      "timestamp": "2023-07-29T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
     {
       "timestamp": "2023-07-30T00:00:00Z",
       "count": 1,
