@@ -1,3 +1,12 @@
+2023-08-12T08:12:36Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/5840271983 # 1076
+* notice: Stats Output Repository: https://github.com/andry81-stats/github-action-extensions--gh-stats/commits?branch=master&time_zone=utc&until=2023-08-12
+* notice: last 14d: unq all: 2 10
+* notice: prev accum: outdated-unq outdated-all / unq all: 132 158 / 143 169
+* notice: next accum: outdated-unq outdated-all / unq all: 133 159 / 143 169
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
+* notice: removed / changed dates: [2023-07-29] / []
+
 2023-08-11T16:12:50Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/5834723265 # 1074
 * notice: Stats Output Repository: https://github.com/andry81-stats/github-action-extensions--gh-stats/commits?branch=master&time_zone=utc&until=2023-08-11
